--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  height: "100vh";
 }
 
 .App-logo {
@@ -26,6 +27,13 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.content-style {
+  color: white;
+  border: 0.5px solid #353535;
+  margin: 40px;
+  border-radius: 4px;
 }
 
 @keyframes App-logo-spin {
